syntax = "proto3";

package degrees.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/richardbowden/degrees/internal/pb/degrees/v1;degreesv1";

// User represents a user in the system
message User {
  int64 id = 1;
  string first_name = 2;
  string middle_name = 3;
  string surname = 4;
  string email = 5;
  bool enabled = 6;
  bool sysop = 7;
  int32 sign_up_stage = 8;
  google.protobuf.Timestamp created_on = 9;
  google.protobuf.Timestamp updated_at = 10;
}

// Common error response structure
message Error {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
}

// Pagination request parameters
message PaginationRequest {
  int32 page_size = 1;   // Max 100
  string page_token = 2; // Opaque token for next page
}

// Pagination response metadata
message PaginationResponse {
  string next_page_token = 1;
  int32 total_count = 2;
}
